--- a/.github/workflows/ssh.yaml
+++ b/.github/workflows/ssh.yaml
@@ -1,15 +1,9 @@
+name: Ubuntu
+on: push
 jobs:
-  sync-images:
+  build:
     runs-on: ubuntu-20.04
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v2
-        with:
-          path: tools
-
-      - name: Config git user and user.email
-        run: |
-          sudo docker pull registry:2
-          sudo docker run -d -v $PWD/docker:/var/lib/registry/docker -p 127.0.0.1:80:5000 pull registry:2
-          sudo docker tag pull registry:2 localhost/registry:2
-          sudo docker push localhost/registry:2
+    - uses: actions/checkout@v1
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v1
