--- a/.github/workflows/registry.yaml
+++ b/.github/workflows/registry.yaml
@@ -33,13 +33,16 @@ jobs:
       - name: Build registry images
         shell: bash
         env:
+          IMAGE_REPO: "webpsh"
           IMAGE_NAME: "images"
           IMAGE_TAG: "latest"
         run: |
           sudo docker stop registry
           sudo mv -f /var/lib/registry/docker .
-          sudo docker build -t ${IMAGE_NAME}:${IMAGE_TAG} -f build/Dockerfile .
+          sudo docker build -t ${IMAGE_REPO}/${IMAGE_NAME}:${IMAGE_TAG} -f build/Dockerfile .
           docker images
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v1
+      - name: Push image
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker push ${IMAGE_REPO}/${IMAGE_NAME}:${IMAGE_TAG}
