--- a/.github/workflows/registry.yaml
+++ b/.github/workflows/registry.yaml
@@ -8,15 +8,11 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v2
 
-      - uses: DamianReeves/write-file-action
-        with:
-          path: ./token
-          contents: ${{ secrets.DOCKER_USERNAME }}
-          write-mode: overwrite
-
       - name: Push image
+        env:
+          DOCKER_PASSWORD: "${{ secrets.DOCKER_PASSWORD }}"
         run: |
-          cat ./token | docker login -u ${{ secrets.DOCKER_USERNAME }} -p --password-stdin
+          printenv | sed 's/DOCKER_PASSWORD=//p' | docker login -u ${{ secrets.DOCKER_USERNAME }} -p --password-stdin
 
       - name: Expand disk free space
         run: |
