--- a/.github/workflows/registry.yaml
+++ b/.github/workflows/registry.yaml
@@ -9,10 +9,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Push image
-        env:
-          DOCKER_PASSWORD: "${{ secrets.DOCKER_PASSWORD }}"
         run: |
-          printenv | sed 's/DOCKER_PASSWORD=//p' | docker login -u ${{ secrets.DOCKER_USERNAME }} -p --password-stdin || true
+         echo '${{ secrets.DOCKER_PASSWORD }}' | docker login -u ${{ secrets.DOCKER_USERNAME }} -p --password-stdin || true
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v1
