--- a/.github/workflows/registry.yaml
+++ b/.github/workflows/registry.yaml
@@ -8,10 +8,11 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v2
 
-      - name: Push image
-        run: |
-          echo '${{ secrets.DOCKER_PASSWORD }}' > token
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p $(cat token)
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v1
