--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,15 +9,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Define repo tags by current git repo tag
+        shell: bash
+        run: |
+          git describe --tags --always | sed 's/^/REPO_TAG=/' >> $GITHUB_ENV
+
       - name: Generate Changelog
-        run: echo "# Good things have arrived" > ${{ github.workflow }}-CHANGELOG.txt
+        run: echo "# Good things have arrived" > $GITHUB_ENV-CHANGELOG.txt
 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            sync.sh
+            ${GITHUB_ENV}-CHANGELOG.txt
             images.list
-          body_path: ${{ github.workflow }}-CHANGELOG.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
