--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,14 +10,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate Changelog
-        run: echo "# Good things have arrived" > ${{ github.workflow }}-CHANGELOG.txt
-
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            sync.sh
-            images.list
-          body_path: ${{ github.workflow }}-CHANGELOG.txt
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: md5sum /etc/fstabs
