--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,4 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: mxschmitt/action-tmate@v3
+      - name: test
+        shell : bash
+        run: |
+          echo {a,b,c}
