--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,12 +7,9 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
-      - name: Search latest semver Image
-        uses: tinact/docker.image-retag@master
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          image_name: muzi502/os-packages
-          image_old_tag: latest
-          image_new_tag: v0.1.0-test-1.0
-          registry: ghcr.io
-          registry_username: ${{ github.repository_owner }}
-          registry_password: ${{ secrets.GITHUB_TOKEN }}
+          # fetch all git repo tag for define image tag
+          fetch-depth: 0
+      - uses: mxschmitt/action-tmate@v2
